--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
   "version": 2,
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [
+  "builds": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "./backend/dir/app.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "./frontend/dist",
+      "use": "@vercel/static"
+    }
+  ],
+
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/backend/dir/app.js"
     }
   ]
 }
