production env ready

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon backend/dir/app.js",
-    "start": "node dir/app.js"
+    "start": "node backend/dir/app.js"
   },
   "author": "",
   "license": "ISC",
