--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "./frontend/index.html",
+      "src": "./frontend/dist",
       "use": "@vercel/static"
     }
   ],
