--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
     },
     {
       "source": "/(.*)",
-      "dest": "./frontend/dist/index.html"
+      "destination": "./frontend/dist/index.html"
     }
   ]
 }
