--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,11 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vite": "^4.4.10",
-    "@vitejs/plugin-react": "^4.0.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "vite": "^4.4.10",
+    "@vitejs/plugin-react": "^4.0.3",
     "@types/node": "^20.7.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
